[gd_scene load_steps=4 format=2]

[ext_resource path="res://demo.gd" type="Script" id=1]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float SCREEN_HEIGHT = 240.0;

void fragment() {
	int y_index = int(UV.y * SCREEN_HEIGHT);
	if(y_index % 2 == 0) {
		COLOR.a = 0.1;
	} else {
		COLOR.a = 0.0;
	}
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/SCREEN_HEIGHT = 240.0

[node name="pc demo" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.501961, 0.501961, 1 )

[node name="scanLines" type="ColorRect" parent="Control"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="startmenu" type="Panel" parent="Control"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -187.0
margin_right = 163.0
margin_bottom = -43.0

[node name="GridContainer" type="GridContainer" parent="Control/startmenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="news" type="Button" parent="Control/startmenu/GridContainer"]
margin_right = 160.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Latest News"

[node name="military" type="Button" parent="Control/startmenu/GridContainer"]
margin_top = 37.0
margin_right = 160.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Military"

[node name="resource" type="Button" parent="Control/startmenu/GridContainer"]
margin_top = 74.0
margin_right = 160.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resources"

[node name="social" type="Button" parent="Control/startmenu/GridContainer"]
margin_top = 111.0
margin_right = 160.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Social Media"

[node name="taskbar" type="Panel" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0

[node name="start" type="Button" parent="Control/taskbar"]
margin_left = 3.0
margin_top = 3.0
margin_right = 77.0
margin_bottom = 37.0
text = "OPEN"

[node name="timePnl" type="Panel" parent="Control/taskbar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -85.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = -3.0

[node name="timeLabel" type="Label" parent="Control/taskbar/timePnl"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "TIME-HERE"
align = 1
valign = 1

[connection signal="pressed" from="Control/startmenu/GridContainer/news" to="." method="_on_news_pressed"]
[connection signal="pressed" from="Control/startmenu/GridContainer/military" to="." method="_on_military_pressed"]
[connection signal="pressed" from="Control/startmenu/GridContainer/resource" to="." method="_on_resource_pressed"]
[connection signal="pressed" from="Control/startmenu/GridContainer/social" to="." method="_on_social_pressed"]
[connection signal="pressed" from="Control/taskbar/start" to="." method="_on_start_pressed"]
